# src/routers/dashboard/dashboard.routes.ts
@@ -3,6 +3,7 @@ import { Router } from 'express'
 import { db } from '../../conn'
 import { departmentsTable, usersTable } from '../../db/schema'
 import { IUser } from '../../db/schema/users.schema'
+import { errorHandler } from '../../helpers/errorHandler'
 
 const dashboardRoutes = Router()
 
@@ -10,20 +11,17 @@ dashboardRoutes.get('/summary', async (req, res) => {
     try {
         const localUser = res.locals.user as IUser
 
-        // query to get the department count based on the user role
-        const qyery = localUser.role !== 'super_admin' ? eq(departmentsTable.id, localUser.department.id) : undefined
-
         const deptCount = await db
             .select({ count: count() })
             .from(departmentsTable)
-            .where(qyery)
+            .where(localUser.role !== 'super_admin' ? eq(departmentsTable.id, localUser.department.id) : undefined)
             .execute()
             .then((data) => data[0].count)
 
         const usersCount = await db
             .select({ count: count() })
             .from(usersTable)
-            .where(qyery)
+            .where(eq(usersTable.department, localUser.department.id))
             .execute()
             .then((data) => data[0].count)
 
@@ -31,13 +29,14 @@ dashboardRoutes.get('/summary', async (req, res) => {
             message: 'Dashboard summary fetched',
             payload: {
                 totalDepartments: deptCount,
-                totalusers: usersCount
+                totalUsers: usersCount
             }
         })
     } catch (error) {
-        res.status(500).json({
-            message: 'Internal server error',
-            name: 'InternalServerError'
+        const toReturn = errorHandler(error)
+        res.status(toReturn.code).json({
+            message: toReturn.message,
+            name: toReturn.name
         })
     }
 })
