# src/routers/users/users.openapi.yaml
@@ -159,7 +159,7 @@ paths:
       tags:
         - User
       summary: Get users List
-      operationId: Getusers
+      operationId: GetUsers
       parameters:
         - in: query
           name: skip
@@ -332,7 +332,7 @@ components:
       enum:
         - user
         - admin
-        - superadmin
+        - super_admin
 
     AddUserForm:
       type: object
@@ -371,9 +371,9 @@ components:
           default: "1234567890"
           description: Phone number of the user
         district_id:
-          type: string
-          example: "123"
-          default: "123"
+          type: integer
+          example: 123
+          default: 123
           description: District ID of the user
           required: true
         district_name_en:
